[package]
name = "late_substitution"
version = "0.1.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/hydroper/rust_late_substitution"
license = "MIT OR Apache-2.0"
description = "Late substitution of string parameters"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "3.0.1"
maplit = "1.0.2"